// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text leading short adds the leadingShort class 1`] = `
<div
  className="Text fontSize3 darkGray leadingShort alignLeft breakWord fontWeightNormal"
/>
`;

exports[`Text leading tall adds the leadingTall class 1`] = `
<div
  className="Text fontSize3 darkGray leadingTall alignLeft breakWord fontWeightNormal"
/>
`;

exports[`Text orange adds the orange color class 1`] = `
<div
  className="Text fontSize3 orange alignLeft breakWord fontWeightNormal"
/>
`;

exports[`Text renders 1`] = `
<div
  className="Text fontSize3 darkGray alignLeft breakWord fontWeightNormal"
/>
`;

exports[`Text size sm adds the small size class 1`] = `
<div
  className="Text fontSize1 darkGray alignLeft breakWord fontWeightNormal"
/>
`;

exports[`Text truncate should add a title when the children are text only 1`] = `
<div
  className="Text fontSize3 darkGray alignLeft breakWord fontWeightNormal truncate"
  title="Shall I compare thee to a summer's day - William Shakespeare"
>
  Shall I compare thee to a summer's day - William Shakespeare
</div>
`;

exports[`Text truncate should not add a title when the children are objects 1`] = `
<div
  className="Text fontSize3 darkGray alignLeft breakWord fontWeightNormal truncate"
>
  <div>
    Summer reading:
  </div>
  Shall I compare thee to a summer's day - William Shakespeare
</div>
`;
